# sus-gemma4

./: .gitignore  AGENTS.md  README.md  opencode.jsonc
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/workflows/: validate.yml
app/backend/: README.md  pyproject.toml
app/backend/app/: __init__.py  config.py  main.py  model_runtime.py  ollama_client.py  schemas.py
app/backend/app/services/: prompt_builder.py  rag_search.py  structured_output.py  triage.py
app/backend/tests/: test_health.py  test_ollama_client.py  test_rag_search.py  test_structured_output.py  test_triage.py
app/frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json
data/sources/: finetuning_sources.yml  official_sources.yml  rag_downloads.yml
docs/: dataset-acquisition.md  demo-script.md  rag-document-acquisition.md
evals/: README.md
evals/cases/: sus_safety.jsonl
evals/scripts/: __init__.py  run_live_ollama_evals.py  run_safety_evals.py
evals/tests/: test_safety_evals.py
finetuning/: README.md
prompts/: architecture-review.md  fix-tests.md  implement-feature.md  planner.md  ralph-loop.md  review-pr.md  update-specs.md
rag/: README.md  __init__.py
scripts/: ralph.sh  validate.sh
skills/: agents.md  backend.md  database.md  frontend.md  ml-finetuning.md  rag.md  refactor.md  security.md  testing.md
specs/: api-contracts.md  architecture.md  data-model.md  data-sources.md  plan.md  product.md  requirements.md  validation.md
tasks/: active.md  backlog.md  done.md
(+35 files in other folders)
